# prometheus-opensearch-dashboards-exporter

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: check.yaml
debian/: changelog  control  copyright  rules
prometheus_opensearch_dashboards_exporter/src/: __init__.py  collector.py  main.py
src/: __init__.py  collector.py  main.py
src/prometheus_opensearch_dashboards_exporter/: collector.py  index.html  main.py
tests/: conftest.py  dashboard_response.json
tests/functional/: __init__.py  conftest.py  test_exporter.py
tests/integration/: conftest.py  test_exporter.py
tests/unit/: __init__.py  conftest.py  dashboard_response.json  test_collector.py  test_main.py
